# voice-agents-hack

./: .gitignore
common/src/: lib.rs
follower/src/: main.rs
leader/: Cargo.toml
leader/src/: main.rs  query.rs  storage.rs  store.rs
