[package]
name = "leader"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "leader"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = "0.7"
clap.workspace = true
common = { path = "../common" }
data-encoding.workspace = true
dotenvy.workspace = true
iroh.workspace = true
rand.workspace = true
rand_core_06.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tempfile = "3"
tokio.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
