[package]
name = "leader"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "leader"
path = "src/main.rs"

[features]
default = []
cactus = []

[dependencies]
anyhow.workspace = true
axum = "0.7"
clap.workspace = true
common = { path = "../common" }
data-encoding.workspace = true
dotenvy.workspace = true
iroh.workspace = true
rand.workspace = true
rand_core_06.workspace = true
serde = { version = "1", features = ["derive"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
